--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pvc (0.9.69-0) unstable; urgency=high
+
+  * [Node Daemon] Ensures that system load is always 2 decimal places on Bookworm
+  * [Node Daemon] Fixes bug blocking primary takeover at DNS Aggregator start if Patroni is down
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 29 Aug 2023 22:01:22 -0400
+
 pvc (0.9.68-0) unstable; urgency=high
 
   * [CLI] Fixes another bug with network info view
