--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (0.9.71-0) unstable; urgency=high
+
+  * [API] Adds API support for Debian Bookworm
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Fri, 01 Sep 2023 00:30:42 -0400
+
 pvc (0.9.70-0) unstable; urgency=high
 
   * [Node Daemon] Fixes several compatibility issues for Debian 12 "Bookworm"
