--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pvc (0.9.88-0) unstable; urgency=high
+
+  * [API Daemon] Adds an additional Prometheus metrics proxy for Zookeeper stats.
+  * [API Daemon] Adds a new configuration to enable or disable metric endpoints if desired, defaulting to enabled.
+  * [API Daemon] Alters and adjusts the metrics output for VMs to complement new dashboard.
+  * [CLI Client] Adds a "json-prometheus" output format to "pvc connection list" to auto-generate file SD configs.
+  * [Monitoring] Adds a new VM dashboard, updates the Cluster dashboard, and adds a README.
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Fri, 29 Dec 2023 14:50:40 -0500
+
 pvc (0.9.87-0) unstable; urgency=high
 
   * [API Daemon] Adds cluster Prometheus resource utilization metrics and an updated Grafana dashboard.
