--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pvc (0.9.91-0) unstable; urgency=high
+
+  * [Client CLI] Fixes a bug and improves output during cluster task events.
+  * [Client CLI] Improves the output of the task list display.
+  * [Provisioner] Fixes some missing cloud-init modules in the default debootstrap script.
+  * [Client CLI] Fixes a bug with a missing argument to the vm_define helper function.
+  * [All] Fixes inconsistent package find + rm commands to avoid errors in dpkg.
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Tue, 23 Jan 2024 10:02:19 -0500
+
 pvc (0.9.90-0) unstable; urgency=high
 
   * [Client CLI/API Daemon] Adds additional backup metainfo and an emailed report option to autobackups.
