--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pvc (0.9.94-0) unstable; urgency=high
+
+  * [CLI Client] Fixes an incorrect ordering issue with autobackup summary emails
+  * [API Daemon/CLI Client] Adds an additional safety check for 80% cluster fullness when doing volume adds or resizes
+  * [API Daemon/CLI Client] Adds safety checks to volume clones as well
+  * [API Daemon] Fixes a few remaining memory bugs for stopped/disabled VMs
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Mon, 05 Feb 2024 09:58:07 -0500
+
 pvc (0.9.93-0) unstable; urgency=high
 
   * [API Daemon] Fixes a bug where stuck zkhandler threads were not cleaned up on error
