--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pvc (0.9.96-0) unstable; urgency=high
+
+  * [API Daemon] Fixes a bug when reporting node stats
+  * [API Daemon] Fixes a bug deleteing successful benchmark results
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Fri, 08 Mar 2024 14:23:06 -0500
+
 pvc (0.9.95-0) unstable; urgency=high
 
   * [API Daemon/CLI Client] Adds a flag to allow duplicate VNIs in network templates
