--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pvc (1.0.1-0) unstable; urgency=high
+
+  * [CLI Client] [Bugfix] Fix bug with DELETE endpoints returning invalid data
+
+ -- Joshua M. Boniface <joshua@boniface.me>  Sat, 21 Jun 2025 12:40:33 -0400
+
 pvc (1.0-0) unstable; urgency=high
 
   **Announcement**: We are pleased to announce PVC 1.0! Functionally speaking, there are only a few minor improvements over the previous 0.9.107, but I believe it's finally time to call this a "1.0" release. Recently I have had much less opportunity to work on PVC as I would like, so some features are still not quite there, but those can arrive in future versions over time.
